--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,13 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+
+  font-size: 23px;
+  color: blue;
+  margin: 2rem;
+}
+a:hover{
+  color: rgb(163, 163, 255);
 }
 
 * {
@@ -23,4 +30,20 @@ a {
     color: white;
     background: black;
   }
+}
+
+
+.list{
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+}
+
+.list-style{
+display: flex;
+gap: 2rem;
 }
